# webrecord

./: .editorconfig  .gitignore  Cargo.toml  Rocket.toml  rustfmt.toml
docs/: apis.md
src/: error.rs  func.rs  lib.rs  main.rs
tools/: make_new_db.sh  table.sql
