[package]
name = "webrecord"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
thiserror = "1.0.63"

[dependencies.sqlx]
version = "0.7"
default-features = false
features = ["time"]

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["sqlx_sqlite"]
